# C-chatserver

./: CMakeLists.txt  建立数据库chat.sql
include/: public.hpp
include/server/: chatservice.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/db/: db.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: db.cpp
